[gd_scene load_steps=3 format=2]

[ext_resource path="res://json.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Panel"]
visible = true
margin_left = 317.552
margin_top = 213.281
margin_right = 733.552
margin_bottom = 397.281
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
current_file = "default_env.tres"
current_path = "res://default_env.tres"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="Panel"]
margin_left = 31.0
margin_top = 25.0
margin_right = 153.0
margin_bottom = 75.0
text = "Open"

[node name="ItemList" type="ItemList" parent="Panel"]
margin_left = 103.833
margin_top = 155.219
margin_right = 463.833
margin_bottom = 447.219
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLabel" type="RichTextLabel" parent="Panel"]
margin_left = 600.0
margin_top = 150.0
margin_right = 700.0
margin_bottom = 190.0
tab_size = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 482.0
margin_top = 195.281
margin_right = 867.0
margin_bottom = 421.281
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="VBoxContainer" parent="Panel/ScrollContainer"]
theme = SubResource( 1 )
[connection signal="file_selected" from="Panel/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Panel/OpenButton" to="." method="_on_OpenButton_pressed"]
[connection signal="item_selected" from="Panel/ItemList" to="." method="_on_ItemList_item_selected"]
